--- a/Strahovanie/src/chunk/offers/proposal.html
+++ b/Strahovanie/src/chunk/offers/proposal.html
@@ -5,6 +5,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__vuso proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -47,8 +49,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -64,6 +72,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__upsk proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -106,8 +116,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -122,6 +138,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__asko proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -164,8 +182,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -180,6 +204,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__oranta proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -222,8 +248,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -238,6 +270,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__vuso proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -280,8 +314,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -297,6 +337,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__upsk proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -339,8 +381,14 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
+
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
+
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
+
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
@@ -355,6 +403,8 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__asko proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
+
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -413,6 +463,7 @@
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <div class="proposal__oranta proposal__logo"></div>
+            <h6 class="proposal__title proposal__title_rating">Рейтинг</h6>
             <ul class="proposal__stars">
               <li class="proposal__star">
                 <img
@@ -455,8 +506,11 @@
                 />
               </li>
             </ul>
+            <h6 class="proposal__title proposal__title_name">Название</h6>
             <span class="proposal__name">Название услуги в 1 строку</span>
+            <h6 class="proposal__title proposal__title_franchise">Франшиза</h6>
             <span class="proposal__sum">1000 грн.</span>
+            <h6 class="proposal__title proposal__title_price">Цена</h6>
             <div class="proposal__price">
               <span class="proposal__price_new">1200 грн.</span>
               <span class="proposal__price_old">1400 грн.</span>
