--- a/Strahovanie/src/chunk/footer.html
+++ b/Strahovanie/src/chunk/footer.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="footer__wrapper">
       <div class="footer__logotype">
-        <img src="./img/Logo_bot.svg" alt="Logo" width="323" height="71" />
+        <a href="./index.html"
+          ><img src="./img/Logo_bot.svg" alt="Logo" width="323" height="71"
+        /></a>
       </div>
       <nav class="footer__navigation navigation">
         <ul class="navigation__list">
@@ -16,13 +18,15 @@
             <a href="#" class="navigation__link">Зеленая карта</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Туристическое страхование</a>
+            <a href="./tourism.html" class="navigation__link"
+              >Туристическое страхование</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">О нас</a>
+            <a href="./about.html" class="navigation__link">О нас</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Контакты</a>
+            <a href="./contacts.html" class="navigation__link">Контакты</a>
           </li>
         </ul>
       </nav>
