--- a/Strahovanie/src/chunk/header.html
+++ b/Strahovanie/src/chunk/header.html
@@ -10,13 +10,15 @@
           class="menu__open"
         />
       </div>
-      <img
-        src="./img/Logo_top.svg"
-        alt="Logo"
-        class="header__logo"
-        width="171"
-        height="53"
-      />
+      <a href="./index.html"
+        ><img
+          src="./img/Logo_top.svg"
+          alt="Logo"
+          class="header__logo"
+          width="171"
+          height="53"
+      /></a>
+
       <nav class="header__nav nav">
         <img
           src="./icons/close.svg"
@@ -32,10 +34,16 @@
             <a href="#" class="nav__link">Зеленая карта</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Туристическое страхование</a>
+            <a href="./tourism.html" class="nav__link"
+              >Туристическое страхование</a
+            >
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+          <li class="nav__item">
+            <a href="./about.html" class="nav__link">О нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="./contacts.html" class="nav__link">Контакты</a>
+          </li>
         </ul>
       </nav>
       <button class="btn header__btn"><span>заказать звонок</span></button>
