--- a/Strahovanie/src/html/contacts.html
+++ b/Strahovanie/src/html/contacts.html
@@ -16,5 +16,6 @@
       </main>
       @@include("../chunk/footer.html")
     </div>
+    <script src="./js/hamburger-min.js"></script>
   </body>
 </html>
