--- a/Strahovanie/src/html/tourism.html
+++ b/Strahovanie/src/html/tourism.html
@@ -24,10 +24,8 @@
       </main>
       @@include("../chunk/footer.html")
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/makeRequest-min.js"></script>
-    <script type="module" src="./js/confidence-min.js"></script>
-    <script type="module" src="./js/samples-min.js"></script>
+    <script type="module" src="./js/sliders-min.js"></script>
     <script src="./js/accordeon-min.js"></script>
+    <script src="./js/hamburger-min.js"></script>
   </body>
 </html>
