--- a/Strahovanie/src/chunk/insurance-arrange.html
+++ b/Strahovanie/src/chunk/insurance-arrange.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide_padding">
           <div class="step">
             <div class="step__wrapper">
               <div class="step__img">
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide_padding">
           <div class="step">
             <div class="step__wrapper">
               <div class="step__img">
@@ -70,7 +70,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide_padding">
           <div class="step">
             <div class="step__wrapper">
               <div class="step__img">
