--- a/Strahovanie/src/chunk/insurance-online.html
+++ b/Strahovanie/src/chunk/insurance-online.html
@@ -1,6 +1,8 @@
 <section class="description">
   <div class="description__container container">
-    <h3 class="description__header">Онлайн страхование</h3>
+    <div class="description__wrapper">
+      <h3 class="description__header">Онлайн страхование</h3>
+    </div>
     <div class="description__content">
       <p class="description__text">
         Lorem Ipsum - это текст-"рыба", часто используемый в печати и
