about mobile page

--- a/Strahovanie/src/chunk/faq.html
+++ b/Strahovanie/src/chunk/faq.html
@@ -40,7 +40,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
@@ -89,7 +89,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
@@ -139,7 +139,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
@@ -188,7 +188,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
@@ -238,7 +238,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
@@ -287,7 +287,7 @@
             <li class="answer__item">
               <span
                 >Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-                вэб-дизайне.</span
+                <nobr>вэб-дизайне.</nobr></span
               >
             </li>
             <li class="answer__item">
