--- a/Strahovanie/src/html/tourism.html
+++ b/Strahovanie/src/html/tourism.html
@@ -16,6 +16,7 @@
       @@include("../chunk/header.html")
       <main class="main">
         @@include("../chunk/tourism/insurance-tourism.html")
+        @@include("../chunk/tourism/insurance-another.html")
         @@include("../chunk/advantages.html") @@include("../chunk/samples.html")
         @@include("../chunk/insurance-arrange.html")
         @@include("../chunk/confidence.html") @@include("../chunk/faq.html")
