--- a/Strahovanie/src/chunk/advantages.html
+++ b/Strahovanie/src/chunk/advantages.html
@@ -1,7 +1,7 @@
 <section class="advantages">
   <div class="container">
     <h2 class="heading advantages__header">
-      Преимущества заказа полиса онлайн - экономия 10%
+      Преимущества заказа полиса онлайн - <nobr>экономия 10%</nobr>
     </h2>
     <div class="advantages__wrapper">
       <ul class="advantages__list benefits">
