--- a/Ceramica/src/chunk/underheader.html
+++ b/Ceramica/src/chunk/underheader.html
@@ -13,8 +13,7 @@
         <div class="container">
           <div class="underheader-slider__description description">
             <h3 class="description__title">
-              Керамика <br />
-              для ваших идей
+              <span class="description__name">Керамика</span> для ваших идей
             </h3>
             <p class="description__text">
               Лучшие европейские коллекции керамики и керамогранита
@@ -34,8 +33,7 @@
         <div class="container">
           <div class="underheader-slider__description description">
             <h3 class="description__title">
-              Керамика <br />
-              для ваших идей
+              <span class="description__name">Керамика</span> для ваших идей
             </h3>
             <p class="description__text">
               Лучшие европейские коллекции керамики и керамогранита
@@ -55,8 +53,7 @@
         <div class="container">
           <div class="underheader-slider__description description">
             <h3 class="description__title">
-              Керамика <br />
-              для ваших идей
+              <span class="description__name">Керамика</span> для ваших идей
             </h3>
             <p class="description__text">
               Лучшие европейские коллекции керамики и керамогранита
@@ -90,9 +87,9 @@
       </div>
       <div class="underheader-nav__arrows">
         <svg
-          width="31"
+          width="30"
           height="12"
-          viewBox="0 0 31 12"
+          viewBox="0 0 30 12"
           fill="white"
           xmlns="http://www.w3.org/2000/svg"
           class="underheader-nav__prev"
@@ -105,9 +102,9 @@
         </svg>
         <div class="underheader-nav__divider"></div>
         <svg
-          width="31"
+          width="30"
           height="12"
-          viewBox="0 0 31 12"
+          viewBox="0 0 30 12"
           fill="white"
           xmlns="http://www.w3.org/2000/svg"
           class="underheader-nav__next"
