--- a/Ceramica/src/chunk/blog.html
+++ b/Ceramica/src/chunk/blog.html
@@ -12,6 +12,8 @@
               src="./img/blog/blog_1.jpg"
               alt="Blog photo"
               class="card__img"
+              width="380"
+              height="325"
             />
             <div class="card__description">
               <div class="card__meta">
@@ -36,6 +38,8 @@
               src="./img/blog/blog_2.jpg"
               alt="Blog photo"
               class="card__img"
+              width="380"
+              height="325"
             />
             <div class="card__description">
               <div class="card__meta">
@@ -60,6 +64,8 @@
               src="./img/blog/blog_3.jpg"
               alt="Blog photo"
               class="card__img"
+              width="380"
+              height="325"
             />
             <div class="card__description">
               <div class="card__meta">
@@ -84,6 +90,8 @@
               src="./img/blog/blog_4.jpg"
               alt="Blog photo"
               class="card__img"
+              width="380"
+              height="325"
             />
             <div class="card__description">
               <div class="card__meta">
@@ -108,6 +116,8 @@
               src="./img/blog/blog_5.jpg"
               alt="Blog photo"
               class="card__img"
+              width="380"
+              height="325"
             />
             <div class="card__description">
               <div class="card__meta">
