--- a/Ceramica/src/chunk/instagram.html
+++ b/Ceramica/src/chunk/instagram.html
@@ -9,6 +9,8 @@
           src="./img/our_instagram/our_instagram_1.jpg"
           alt="our instagram"
           class="tile__image"
+          width="280"
+          height="280"
         />
       </div>
       <div class="tile__element">
@@ -16,6 +18,8 @@
           src="./img/our_instagram/our_instagram_2.jpg"
           alt="our instagram"
           class="tile__image"
+          width="280"
+          height="280"
         />
       </div>
       <div class="tile__element">
@@ -23,6 +27,8 @@
           src="./img/our_instagram/our_instagram_3.jpg"
           alt="our instagram"
           class="tile__image"
+          width="280"
+          height="280"
         />
       </div>
       <div class="tile__element">
@@ -30,6 +36,8 @@
           src="./img/our_instagram/our_instagram_4.jpg"
           alt="our instagram"
           class="tile__image"
+          width="280"
+          height="280"
         />
       </div>
       <div class="tile__element">
@@ -37,6 +45,8 @@
           src="./img/our_instagram/our_instagram_5.jpg"
           alt="our instagram"
           class="tile__image"
+          width="280"
+          height="280"
         />
       </div>
       <div class="tile__element">
