--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -23,6 +23,7 @@
       @@include("../chunk/footer.html")
     </div>
     <script src="./js/main-min.js"></script>
+    <script src="./js/magnyfying-min.js"></script>
     <script type="module" src="./js/swiper-min.js"></script>
   </body>
 </html>
