--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
+        height: 100%;
       }
       a {
         font-weight: 24px;
         display: flex;
+        flex-direction: column;
         margin-bottom: 20px;
       }
     </style>
