--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <title>Document</title>
     <style>
       body {
+        margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 100%;
+        height: 800px;
+        flex-direction: column;
+        background: url("./WallpaperDog-11050036.gif");
       }
       a {
-        font-weight: 24px;
-        display: flex;
-        flex-direction: column;
+        color: white;
+        font-size: 40px;
         margin-bottom: 20px;
+      }
+      a:hover {
+        color: purple;
       }
     </style>
   </head>
