--- a/Ceramica/src/chunk/blog.html
+++ b/Ceramica/src/chunk/blog.html
@@ -1,6 +1,6 @@
 <section class="blog">
   <div class="container cathword blog__cathword">
-    <h2 class="cathword__text">интересное из блога</h2>
+    <h2 class="cathword__text blog__header">интересное из блога</h2>
     <button class="btn blog__btn"><span>перейти в блог</span></button>
   </div>
   <div class="blog__carousel">
