--- a/Ceramica/src/chunk/instagram.html
+++ b/Ceramica/src/chunk/instagram.html
@@ -52,7 +52,12 @@
       <div class="tile__element">
         <div class="instagram__account">
           <div class="instagram__logo">
-            <img src="./icons/Instagram.svg" alt="Instagram" />
+            <img
+              src="./icons/Instagram.svg"
+              alt="Instagram"
+              width="28"
+              height="28"
+            />
           </div>
           <p class="instagram__link">@ceramica</p>
           <a href="#" class="instagram__btn"><span>Подписаться</span></a>
