--- a/Ceramica/src/chunk/project.html
+++ b/Ceramica/src/chunk/project.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="carousel-wrapper">
-      <div class="project-carousel" thumbsSlider="">
+      <div class="project-carousel">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img
