--- a/Ceramica/src/chunk/footer.html
+++ b/Ceramica/src/chunk/footer.html
@@ -8,12 +8,12 @@
             ><img
               src="./icons/Facebook.svg"
               alt="Facebook"
-              width="20"
-              height="20"
+              width="21"
+              height="21"
               class="media__img" /></a
           ><a href="#" class="media__link"
             ><img
-              src="./icons/Instagram.svg"
+              src="./icons/InstagramFooter.svg"
               alt="Instagram"
               width="20"
               height="20"
@@ -22,7 +22,7 @@
             ><img
               src="./icons/Youtube.svg"
               width="24"
-              height="17"
+              height="24"
               alt="Youtude"
               class="media__img"
           /></a>
