--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -24,6 +24,6 @@
     </div>
     <script src="./js/main-min.js"></script>
     <script src="./js/magnyfying-min.js"></script>
-    <script type="module" defer src="./js/swiper-min.js"></script>
+    <script type="module" src="./js/swiper-min.js"></script>
   </body>
 </html>
