--- a/Strahovanie/src/chunk/tourism/insurance-tourism.html
+++ b/Strahovanie/src/chunk/tourism/insurance-tourism.html
@@ -1,7 +1,7 @@
 <section class="tourism">
   <div class="container">
     <div class="tourism__container">
-      <form action="" method="get" class="tourism__form touristic">
+      <form action="#" method="get" class="tourism__form touristic">
         <h2 class="touristic__header heading">Туристическое страхование</h2>
         <div class="touristic__trip trip">
           <div class="trip__direction direction">
