--- a/Strahovanie/src/chunk/insurance-arrange.html
+++ b/Strahovanie/src/chunk/insurance-arrange.html
@@ -5,7 +5,7 @@
     <div class="arrange__swiper">
       <div class="swiper__nav switch">
         <ul class="switch__menu">
-          <div class="swiper-pagination"></div>
+          <li class="swiper-pagination"></li>
           <li class="switch__item switch__item_active">
             <span class="switch__index" data-index="0">1</span
             ><span class="switch__description">Выберите параметры</span>
