--- a/Strahovanie/src/chunk/tourism/insurance-tourism.html
+++ b/Strahovanie/src/chunk/tourism/insurance-tourism.html
@@ -31,7 +31,7 @@
             </div>
             <div class="period__choice">
               <div class="period__from">
-                <span class="period__time">От</span>
+                <label class="period__time" for="periodfrom">От</label>
                 <select
                   name="periodfrom"
                   id="periodfrom"
@@ -43,7 +43,7 @@
                 </select>
               </div>
               <div class="period__to">
-                <span class="period__time">До</span>
+                <label class="period__time" for="periodto">До</label>
                 <select
                   name="periodto"
                   id="periodto"
@@ -72,7 +72,7 @@
                 />
               </div>
               <div class="tourist__goal">
-                <span class="trip__param">Цель поездки</span>
+                <label class="trip__param" for="target">Цель поездки</label>
                 <select
                   name="target"
                   id="target"
